--- a/static/stileDashboard.css
+++ b/static/stileDashboard.css
@@ -264,7 +264,9 @@ body,html {
 
 .box-domanda p {
   text-align: center;
-  border: 3px solid black;
+  /* border: 3px solid black; */
+  padding: 0.5%;
+  margin: 1% 10%;
   background-color: #e4e4e4;
   border-radius: 3px;
   /* margin: 5% 5%; */
@@ -280,14 +282,14 @@ body,html {
   text-align: center;
   /* display: none; */
   width: 100%;
-  border: solid 1px black;
+  /* border: solid 1px black; */
 }
 
 .img-argomento img{
   align-items: center;
   width: 75%;
   margin: 1%;
-  border: solid 1px black;
+  border: solid 2px black;
 }
 
 .box-risposta {
@@ -337,7 +339,7 @@ body,html {
 .div1{
   opacity: 1; /* Imposta l'opacità iniziale */
   transition: opacity 1s ease; /* Aggiungi una transizione per l'opacità */
-  text-align: center;
+  /* text-align: center; */
   display: flex;
   justify-content: center;
   background-color: #881c1c;
@@ -392,21 +394,22 @@ form{
 }
 
 .button_div {
-  display: flex; /* Utilizziamo flexbox per centrare il contenuto */
-  justify-content: center; /* Centra il contenuto orizzontalmente */
+  justify-content: left; /* Centra il contenuto orizzontalmente */
   align-items: center; /* Centra il contenuto verticalmente */
-  border: #000 solid 3px;
-  height: 100%;
+}
+
+.descrizioneQuiz {
+  padding: 5% 10%;
+  background-color: #eaeaea;
+  /* border: #000 solid 2px; */
+  border-radius: 10px;
   width: 100%;
 }
 
 .bottoneGioca {
-  /* position: fixed; */
-  margin-top: 60%;
+  font-size: 16px;
   color: white;
   background-color: #881c1c;
-  height: 10%;
-  width: 15%;
   border-radius: 5px;
 }
 
@@ -562,12 +565,11 @@ form{
   .item {
     display: inline-block;
     padding: 4 2rem;
-    
     font-size: 1.5rem;
     background-color: #fff;
     margin: 0 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
+    border-radius: 5px;
   }
   
   @keyframes marquee {
@@ -624,6 +626,14 @@ form{
   
   #correctAnimatedImage img {
     width: 100%; /* Modifica la dimensione dell'immagine secondo necessità */
+  }
+
+  .descrizioneQuiz {
+    padding: 5% 5%;
+    background-color: #eaeaea;
+    /* border: #000 solid 2px; */
+    border-radius: 10px;
+    width: 90%;
   }
   
  
