--- a/templates/home.html
+++ b/templates/home.html
@@ -165,8 +165,8 @@
             </div>
             <div class="risposta">
                 <form id="rispostaForm" method="POST">
-                    <input type="hidden" id="id_utente_risp" name="id_utente_risp" value={{session["id"]}}> <!-- Sostituisci con il valore reale -->
-                    <input type="hidden" id="id_spot" name="id_spot" value="1"> <!-- Sostituisci con il valore reale -->
+                    <input type="hidden" id="id_utente_risp" name="id_utente_risp" value={{session["id"]}}> 
+                    <input type="hidden" id="id_spot" name="id_spot" value="1"> 
                     <input type="text" id="contenuto" name="contenuto" placeholder="Rispondi..." class="input-risp" required>
                     <button type="button" class="btninvia" onclick="inviaRisposta()">Invia</button>
                 </form>
@@ -184,17 +184,17 @@
             // Mostra l'overlay
             document.querySelector('.overlay').style.display = 'block';
         
-            // Crea un div card
+            // Creazione di un div card
             var card = document.createElement('div');
             card.classList.add('regcard');
         
-            // Crea un iframe all'interno della card
+            // Creazione di un iframe all'interno della card
             var iframe = document.createElement('iframe');
             iframe.src = url;
         
             card.appendChild(iframe);
         
-            // Crea il pulsante di chiusura
+            // Creazione del pulsante di chiusura
             var closeBtn = document.createElement('button');
             closeBtn.classList.add('close-btn');
             closeBtn.innerHTML = 'X';
@@ -203,8 +203,7 @@
               card.remove();
             };
             card.appendChild(closeBtn);
-        
-            // Aggiungi la card al body del documento
+    
             document.body.appendChild(card);
           }
     </script>
@@ -216,15 +215,15 @@
             // Mostra l'overlay
             document.querySelector('.overlay').style.display = 'block';
         
-            // Crea un div card
+            // Creazione di un div card
             var card = document.createElement('div');
             card.classList.add('logcard');
         
-            // Crea un iframe all'interno della card
+            // Creazione di un iframe all'interno della card
             var iframe = document.createElement('iframe');
             iframe.src = url;
             card.appendChild(iframe);
-            // Crea il pulsante di chiusura
+            // Creazione del pulsante di chiusura
             var closeBtn = document.createElement('button');
             closeBtn.classList.add('close-btn');
             closeBtn.innerHTML = 'X';
@@ -233,8 +232,6 @@
               card.remove();
             };
             card.appendChild(closeBtn);
-        
-            // Aggiungi la card al body del documento
             document.body.appendChild(card);
           }
     </script>
@@ -243,16 +240,16 @@
         let clickedDivId = null;
     
         function changeBackgroundColor(element) {
-            // Rimuove il colore grigio da tutte le div
+            // Rimozione del colore grigio da tutte le div
             const allSpottedDivs = document.querySelectorAll('.spotted');
             allSpottedDivs.forEach(div => {
                 div.classList.remove('grey-background');
             });
     
-            // Aggiunge il colore grigio alla div cliccata
+            // Aggiunta del colore grigio alla div cliccata
             element.classList.add('grey-background');
 
-            // Salva l'id della div cliccata in una variabile
+            // Salvataggio dell'id della div cliccata in una variabile
             clickedDivId = element.id;
             console.log("Clicked div id:", clickedDivId);
         }
@@ -275,7 +272,7 @@
         .then(response => {
             if (response.ok) {
                 alert('Risposta inserita con successo!');
-                document.getElementById('contenuto').value = ''; // Cancella il campo di risposta
+                document.getElementById('contenuto').value = ''; 
             } else {
                 alert('Errore durante l\'inserimento della risposta.');
             }
@@ -290,9 +287,9 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
         document.getElementById('creaSpotForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Impedisci l'invio del form predefinito
+            event.preventDefault(); // Blocco dell'invio del form predefinito
             
-            var formData = new FormData(this); // Crea un oggetto FormData con i dati del form
+            var formData = new FormData(this); // Creazione di un oggetto FormData con i dati del form
             
             fetch('/inserisci_spot', {
                 method: 'POST',
@@ -308,7 +305,6 @@
             .then(data => {
                 if (data.success) {
                     alert('Spot inserito con successo!');
-                    // Puoi eseguire ulteriori azioni qui, ad esempio chiudere il popup o aggiornare la pagina
                 } else {
                     throw new Error('Errore durante l\'inserimento dello spot.');
                 }
