--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -56,7 +56,7 @@
                 }
 
                 if (logcard) {
-                    logcard.remove();
+                    logcard.remove
                 } else {
                     console.error('Logcard not found');
                 }
